2010-05-04 Sascha Korth  <sascha@brotherskorth.com>
	* fixed Bug #7556
	
2010-05-01 Sascha Korth  <sascha@brotherskorth.com>
	* change in folder strukture
	
2010-04-29 Sascha Korth  <sascha@brotherskorth.com>
	* first trunk commit