@@ -1,16 +1,9 @@
 <?php
-// DO NOT CHANGE THIS FILE! It is automatically generated by Tx_Extbase_Utility_Extension::createAutoloadRegistryForExtension.
-// This file was generated on 2010-05-01 01:42
 
 $extensionClassesPath = t3lib_extMgm::extPath('fbgraph') . 'Classes/';
+
 return array(
-	'tx_fbgraph_controller_feedcontroller' => $extensionClassesPath . 'Controller/FeedController.php',
-	'tx_fbgraph_controller_profilecontroller' => $extensionClassesPath . 'Controller/ProfileController.php',
-	'tx_fbgraph_domain_model_comment' => $extensionClassesPath . 'Domain/Model/Comment.php',
-	'tx_fbgraph_domain_model_facebook' => $extensionClassesPath . 'Domain/Model/Facebook.php',
-	'tx_fbgraph_domain_model_feed' => $extensionClassesPath . 'Domain/Model/Feed.php',
-	'tx_fbgraph_domain_model_feedentry' => $extensionClassesPath . 'Domain/Model/FeedEntry.php',
-	'tx_fbgraph_domain_model_profile' => $extensionClassesPath . 'Domain/Model/Profile.php',
 	'tx_fbgraph_facebooksdk' => $extensionClassesPath . 'FacebookSDK/class.tx_fbgraph_facebookSDK.php',
 );
+
 ?>
